--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<!--Header-->
+<poker-header></poker-header>
+
+<main>
+    <!--Buscar-->
+<poker-search></poker-search>
+    <poker-list></poker-list>
+</main>
