--- a/src/app/shared/poker-list/poker-list.component.html
+++ b/src/app/shared/poker-list/poker-list.component.html
@@ -1,29 +1,24 @@
-<a class="pokemon">
-    <section class="pokemon__status">
-        <h2>
-            Bulbasaur
-        </h2>
-        <ul>
-            <li>Grass</li>
-            <li>Poison</li>
-        </ul>
-    </section>
-    <section class="pokemon__image">
-        <img src="assets/pokemon.png" alt="Bulbasaur">
-    </section>
-</a>
+<!--Buscar-->
+<poker-search (emmitSearch)="getSearch($event)"></poker-search>
 
-<a class="pokemon">
+
+<section class="listagem">
+<ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
+<a [routerLink]="['details', pokemon.status.id]" class="pokemon" *ngIf="pokemon.status">
     <section class="pokemon__status">
         <h2>
-            Bulbasaur
+            {{pokemon.name}} 
         </h2>
         <ul>
-            <li>Grass</li>
-            <li>Poison</li>
+            <li *ngFor="let value of pokemon.status.type">
+                {{value.type.name}} {{pokemon.status.id}}
         </ul>
     </section>
     <section class="pokemon__image">
-        <img src="assets/pokemon.png" alt="Bulbasaur">
+        <img 
+         [src]="pokemon.status.sprites.other.dream_world.front_default"
+         [alt]= "pokemon.name">
     </section>
 </a>
+</ng-template>
+</section>
