--- a/src/app/shared/poker-list/poker-list.component.scss
+++ b/src/app/shared/poker-list/poker-list.component.scss
@@ -1,9 +1,11 @@
 @import '../../../config-scss/rem-calc.scss';
 
-:host{
+:host {
+.listagem{
 
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 
     padding: rem-calc(20) 0;
 
@@ -16,13 +18,18 @@
         height: rem-calc(157 - 40);
         padding: rem-calc(20);
 
+        margin-bottom: rem-calc(10);
         border-radius: rem-calc(10);
+
+        text-decoration: none;
+        color: var(--primary-color);
 
         &__status{
             h2{
                 font-size: rem-calc(22);
                 font-style: italic;
                 font-weight: 700;
+                text-transform: capitalize;
 
                 margin-bottom: rem-calc(10);
             }
@@ -58,8 +65,9 @@
             background: url('../../../assets/bg/background-list-pokemons.svg') no-repeat;
 
             img{
-                width: rem-calc(80);
+                width: rem-calc(70);
             }
         }
     }
+}
 }
