--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import './config-scss/reset.scss';
 @import './config-scss/rem-calc.scss';
 @import './config-scss/btn.scss';
+@import './assets/animation.scss';
 
 html{
     font-family: 'Roboto', sans-serif;
