--- a/src/app/shared/poker-search/poker-search.component.scss
+++ b/src/app/shared/poker-search/poker-search.component.scss
@@ -7,7 +7,7 @@
         align-items: center;
 
         padding: rem-calc(15) rem-calc(20);
-        background-color: rgba(255, 255, 255, 0.2);
+        background: var(--tres-color);
 
         border-radius: rem-calc(10);
         
