--- a/src/app/shared/poker-list/poker-list.component.html
+++ b/src/app/shared/poker-list/poker-list.component.html
@@ -17,11 +17,14 @@
     <section class="pokemon__image">
         <img 
          [src]="pokemon.status.sprites.other.dream_world.front_default"
-         [alt]= "pokemon.name">
+         [alt]= "pokemon.name" class="tada">
     </section>
 </a>
 </ng-template>
+
+<button class="btn-topo" (click)="scrollToTop()" *ngIf="showButton">Voltar ao Topo</button>
 </section>
+
 
         <img
         src="assets/error.png"
