deploy esta funcionando

--- a/src/app/shared/poker-list/poker-list.component.html
+++ b/src/app/shared/poker-list/poker-list.component.html
@@ -7,7 +7,7 @@
 <a [routerLink]="['details', pokemon.status.id]" class="pokemon" *ngIf="pokemon.status">
     <section class="pokemon__status">
         <h2>
-            <h3>Testandooo comiitttt</h3>
+           <!-- <h3>Testandooo comiitttt</h3> -->
             {{pokemon.name}} 
         </h2>
         <ul>
